build_output.txt
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.8/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 
> Task :createMinecraftArtifacts UP-TO-DATE
> Task :compileJava UP-TO-DATE
> Task :processResources UP-TO-DATE
> Task :classes UP-TO-DATE
> Task :jarJar NO-SOURCE
> Task :jar UP-TO-DATE
> Task :assemble UP-TO-DATE

> Task :compileTestJava FAILED
/home/gael/Documents/linear 1.21.1 neoforge rewrite/src/test/java/com/bugfunbug/linearreader/linear/LinearBackedRegionFileTest.java:43: error: constructor LinearRegionFile in class LinearRegionFile cannot be applied to given types;
        LinearRegionFile region = new LinearRegionFile(file, false);
                                  ^
  required: Path,boolean,RegionStorageInfo
  found:    Path,boolean
  reason: actual and formal argument lists differ in length
/home/gael/Documents/linear 1.21.1 neoforge rewrite/src/test/java/com/bugfunbug/linearreader/linear/LinearBackedRegionFileTest.java:73: error: constructor LinearRegionFile in class LinearRegionFile cannot be applied to given types;
        LinearRegionFile region = new LinearRegionFile(file, false);
                                  ^
  required: Path,boolean,RegionStorageInfo
  found:    Path,boolean
  reason: actual and formal argument lists differ in length
/home/gael/Documents/linear 1.21.1 neoforge rewrite/src/test/java/com/bugfunbug/linearreader/linear/LinearRegionFileCorpusTest.java:49: error: constructor LinearRegionFile in class LinearRegionFile cannot be applied to given types;
        LinearRegionFile region = new LinearRegionFile(file, false);
                                  ^
  required: Path,boolean,RegionStorageInfo
  found:    Path,boolean
  reason: actual and formal argument lists differ in length
/home/gael/Documents/linear 1.21.1 neoforge rewrite/src/test/java/com/bugfunbug/linearreader/linear/LinearRegionFileRecoveryTest.java:47: error: constructor LinearRegionFile in class LinearRegionFile cannot be applied to given types;
        LinearRegionFile region = new LinearRegionFile(live, false);
                                  ^
  required: Path,boolean,RegionStorageInfo
  found:    Path,boolean
  reason: actual and formal argument lists differ in length
/home/gael/Documents/linear 1.21.1 neoforge rewrite/src/test/java/com/bugfunbug/linearreader/linear/LinearRegionFileRecoveryTest.java:80: error: constructor LinearRegionFile in class LinearRegionFile cannot be applied to given types;
        LinearRegionFile region = new LinearRegionFile(live, false);
                                  ^
  required: Path,boolean,RegionStorageInfo
  found:    Path,boolean
  reason: actual and formal argument lists differ in length
/home/gael/Documents/linear 1.21.1 neoforge rewrite/src/test/java/com/bugfunbug/linearreader/linear/LinearRegionFileRecoveryTest.java:102: error: constructor LinearRegionFile in class LinearRegionFile cannot be applied to given types;
        LinearRegionFile region = new LinearRegionFile(live, false);
                                  ^
  required: Path,boolean,RegionStorageInfo
  found:    Path,boolean
  reason: actual and formal argument lists differ in length
/home/gael/Documents/linear 1.21.1 neoforge rewrite/src/test/java/com/bugfunbug/linearreader/linear/LinearTestData.java:79: error: constructor LinearRegionFile in class LinearRegionFile cannot be applied to given types;
        LinearRegionFile region = new LinearRegionFile(path, false);
                                  ^
  required: Path,boolean,RegionStorageInfo
  found:    Path,boolean
  reason: actual and formal argument lists differ in length
/home/gael/Documents/linear 1.21.1 neoforge rewrite/src/test/java/com/bugfunbug/linearreader/LinearTestSupport.java:20: error: method update in class LinearConfig cannot be applied to given types;
        LinearConfig.update(
                    ^
  required: int,int,boolean,int,int,int,int,int,int,int,int,int,int,boolean,int,int,boolean
  found:    int,int,boolean,int,int,int,int,int,int,int,int,int,int,boolean,int,int
  reason: actual and formal argument lists differ in length
/home/gael/Documents/linear 1.21.1 neoforge rewrite/src/test/java/com/bugfunbug/linearreader/command/ChunkPrunerTest.java:87: error: constructor LinearRegionFile in class LinearRegionFile cannot be applied to given types;
        LinearRegionFile region = new LinearRegionFile(regionPath, false);
                                  ^
  required: Path,boolean,RegionStorageInfo
  found:    Path,boolean
  reason: actual and formal argument lists differ in length
9 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 5s
5 actionable tasks: 1 executed, 4 up-to-date
